blockml/test/errors/02_field/e300/e300.view
view: e300
table: 1
fields:
  - measure: m
    type: custom
    sql: 1
    percentile: 0.7
